# wg-cfg-builder

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
app/: app.py  services.py  settings.py  utils.py  views.py
app/services/wg/: __init__.py  client.conf.jinja  models.py  server.conf.jinja  service.py  utils.py
